adding final touchups
