# back/src/models/position.models.ts
@@ -1,11 +1,7 @@
 import { z } from "zod";
 import { extendZodWithOpenApi } from "@asteasolutions/zod-to-openapi";
 import { company, position } from "#/db/schema.ts";
-import {
-  createInsertSchema,
-  createSelectSchema,
-  createUpdateSchema,
-} from "drizzle-zod";
+import { createInsertSchema, createSelectSchema } from "drizzle-zod";
 import { ZodTypeAny } from "zod";
 
 extendZodWithOpenApi(z);
@@ -26,28 +22,7 @@ export const CompanyPositionInsertSchema = z
     position_name: position,
   }));
 
-export const PositionUpdateSchema = z
-  .object({
-    position_id: z.string().uuid(),
-    position: name(z.string()),
-  })
-  .transform(({ position_id, position }) => ({
-    position_id,
-    position_name: position,
-  }));
-
-export const CompanyUpdateSchema = z
-  .object({
-    company_id: z.string().uuid(),
-    company: name(z.string()),
-  })
-  .transform(({ company_id, company }) => ({
-    company_id,
-    company_name: company,
-  }));
-
 export type CompanyPostionInsert = z.infer<typeof CompanyPositionInsertSchema>;
-export type CompanyPostionUpdate = z.infer<typeof CompanyPositionUpdateSchema>;
 
 export const CompanySchema = createSelectSchema(company);
 export type Company = z.infer<typeof CompanySchema>;
@@ -60,6 +35,3 @@ export type Position = z.infer<typeof PositionSchema>;
 
 export const PositionInsertSchema = createInsertSchema(position, { name });
 export type PositionInsert = z.infer<typeof PositionInsertSchema>;
-
-export type PositionUpdate = z.infer<typeof PositionUpdateSchema>;
-export type CompanyUpdate = z.infer<typeof CompanyUpdateSchema>;
